@@ -1,3 +1,8 @@
+2009-07-09  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/zlib.test: [Bug #2818131] Added tests and fixed a typo
+	that broke zlib push for deflate format.
+
 2009-07-09  Donal K. Fellows  <dkf@users.sf.net>
 
 	* compat/mkstemp.c (mkstemp): [Bug 2819227]: Use rand() for random
